# stardew_bot

./: Cargo.toml  README.md
dll_unpacker/: Cargo.toml
dll_unpacker/src/: annotator.rs  blob.rs  byte_range.rs  collect_dll_annotations.rs  dll_unpacker.rs  dos_header.rs  enum_map.rs  error.rs  intermediate_language.rs  lib.rs  portable_executable.rs  relative_virtual_address.rs  signature.rs  unpacked_value.rs
dotnet_debugger/: Cargo.toml
dotnet_debugger/src/: access_chain.rs  access_chain_parser.rs  cor_element_type.rs  error.rs  field_description.rs  lib.rs  macros.rs  memory_search.rs  method_table.rs  owned_bytes.rs  persistent_state.rs  physical_expr.rs  runtime_array.rs  runtime_module.rs  runtime_multi_dim_array.rs  runtime_object.rs  runtime_string.rs  runtime_type.rs  runtime_value.rs  static_value_cache.rs  symbolic_expr.rs  symbolic_expr_parser.rs  type_description.rs  typed_pointer.rs  virtual_machine.rs
dotnet_debugger/src/bytecode/: constant_fold.rs  convert_boolean_operator_to_conditional.rs  convert_collect_to_reduce.rs  convert_find_map_to_filter_find.rs  convert_first_to_reduce.rs  exposed_native_function.rs  exposed_native_object.rs  expr.rs  expr_to_virtual_machine.rs  graph_rewrite.rs  identify_static_field.rs  infer_function_parameter_types.rs  inline_function_calls.rs  inline_iterator_filter.rs  inline_iterator_map.rs  legalize_operand_types.rs  lower_symbolic_expr.rs  merge_parallel_reads.rs  merge_range_reduce_to_simple_reduce.rs  mod.rs  native_function.rs  op_index.rs  op_precedence.rs  parser.rs  printer.rs  recursive_rewrite.rs  remove_unused_downcast.rs  remove_unused_pointer_cast.rs  remove_unused_primcast.rs  separate_read_and_parse_bytes.rs  sequential_rewrite.rs  single_rewrite.rs  split_iterator_chain_reduce.rs  type_inference.rs  virtual_machine.rs
dotnet_debugger/src/extensions/: all_ok.rs  find_ok.rs  mod.rs  or_try_init.rs  or_try_insert.rs  result_iterator_ext.rs  try_insert.rs
dotnet_debugger/tests/: common_subexpression_elimination.rs  graph_equality.rs  parse_expr.rs  print_expr.rs  print_graph.rs  run_symbolic_expr.rs  run_virtual_machine.rs  simplify_virtual_machine.rs  symbolic_graph_to_vm.rs  test_merging_parallel_reads.rs  test_parse_print.rs
dsl/: Cargo.toml
dsl/analysis/: Cargo.toml
dsl/analysis/src/: analysis.rs  dsl_type_ext.rs  error.rs  lib.rs  static_field_ext.rs  symbolic_type_ext.rs  type_inference.rs
dsl/benches/: benchmarks.rs  plot.py
dsl/compile/: Cargo.toml
dsl/compile/src/: compiler.rs  error.rs  expr_to_virtual_machine.rs  identify_static_field.rs  lib.rs  symbolic_graph_compile.rs
dsl/graph_comparison/: Cargo.toml
dsl/graph_comparison/src/: ext.rs  graph_comparison.rs  lib.rs
dsl/interpreter/: Cargo.toml
dsl/interpreter/src/: error.rs  interpreter.rs  lib.rs
dsl/ir/: Cargo.toml
dsl/ir/src/: dsl_type.rs  error.rs  exposed_native_object.rs  lib.rs  native_function.rs  node.rs  op_index.rs  op_precedence.rs  parser.rs  printer.rs  reachability.rs  scope.rs  stack_value.rs  symbolic_graph.rs  symbolic_type.rs  symbolic_value.rs
dsl/lowering/: Cargo.toml
dsl/lowering/src/: convert_collect_to_reduce.rs  convert_find_map_to_filter_find.rs  convert_find_to_filter_first.rs  convert_first_to_reduce.rs  copy_first_param.rs  error.rs  infer_function_parameter_types.rs  inline_iterator_map.rs  lib.rs  lower_symbolic_expr.rs  separate_read_and_parse_bytes.rs  split_iterator_chain_reduce.rs
dsl/optimize/: Cargo.toml
dsl/optimize/src/: constant_fold.rs  error.rs  lib.rs  optimize.rs  (+3 more)
dsl/passes/: Cargo.toml
dsl/proc_macros/: Cargo.toml
dsl/rewrite_utils/: Cargo.toml
dsl/runtime/: Cargo.toml
dsl/src/: constant_fold.rs  convert_boolean_operator_to_conditional.rs  convert_collect_to_reduce.rs  convert_find_map_to_filter_find.rs  convert_find_to_filter_first.rs  convert_first_to_reduce.rs  dsl_type.rs  dsl_type_ext.rs  error.rs  exposed_native_function.rs  exposed_native_object.rs  expr.rs  expr_to_virtual_machine.rs  graph_rewrite.rs  identify_static_field.rs  infer_function_parameter_types.rs  inline_function_calls.rs  inline_iterator_filter.rs  inline_iterator_map.rs  legalize_operand_types.rs  lib.rs  lower_symbolic_expr.rs  merge_parallel_reads.rs  merge_range_reduce_to_simple_reduce.rs  native_function.rs  parser.rs  printer.rs  recursive_rewrite.rs  remove_unused_downcast.rs  remove_unused_pointer_cast.rs  remove_unused_primcast.rs  separate_read_and_parse_bytes.rs  sequential_rewrite.rs  single_rewrite.rs  split_iterator_chain_reduce.rs  type_inference.rs  virtual_machine.rs
dsl/tests/: common_subexpression_elimination.rs  graph_equality.rs  parse_expr.rs  print_expr.rs  print_graph.rs  run_symbolic_expr.rs  run_virtual_machine.rs  symbolic_graph_to_vm.rs  test_merging_parallel_reads.rs  test_parse_print.rs
dsl/validation/: Cargo.toml
dsl/vm/: Cargo.toml
stardew_bot/: Cargo.toml
stardew_bot/bot_logic/: Cargo.toml
stardew_bot/game_state/: Cargo.toml
stardew_bot/geometry/: Cargo.toml
stardew_bot/src/: bot_action_display.rs  bot_goal_display.rs  direction.rs  error.rs  fishing.rs  game_action.rs  game_action_to_x11.rs  input_display.rs  keyboard_display.rs  lib.rs  location_display.rs  main.rs  pathfinding.rs  per_frame_reader.rs  player_stats.rs  predicted_luck_display.rs  rate_counter.rs  rng_display.rs  running_log.rs  stardew_bot.rs  tui_draw_rate.rs  watch_point_definition.rs  x11_handler.rs
stardew_utils/: Cargo.toml
stardew_utils/benches/: benchmarks.rs
stardew_utils/src/: error.rs  lib.rs
tui_explorer/: Cargo.toml
tui_explorer/benches/: benchmarks.rs
tui_explorer/src/: annotation.rs  detail_view.rs  dynamic_table.rs  error.rs  input_window.rs  key_sequence.rs  lib.rs  live_variable_display.rs  main.rs  memory_table.rs  metadata_display.rs  non_empty_vec.rs  object_explorer.rs  running_log.rs  runtime_module_view.rs  scroll_bar.rs  search_window.rs  stack_frame_table.rs  terminal_context.rs  tui_explorer.rs  user_config.rs  user_config_editor.rs
tui_utils/: Cargo.toml
tui_utils/src/: error.rs  lib.rs  terminal_context.rs  tui_traits.rs
(+343 files in other folders)
