
[workspace]
members = [
  "dll_unpacker",
  "dotnet_debugger",
  "dsl",
  "dsl/analysis",
  "dsl/compile",
  "dsl/graph_comparison",
  "dsl/ir",
  "dsl/passes",
  "dsl/proc_macros",
  "dsl/rewrite_utils",
  "dsl/validation",
  "env_var_flag",
  "format_utils",
  "iterator_extensions",
  "memory_reader",
  "stardew_bot",
  "stardew_bot/bot_logic",
  "stardew_bot/game_state",
  "stardew_bot/geometry",
  "stardew_utils",
  "tui_explorer",
  "tui_utils",
]
resolver = "2"


[profile.release]
debug = true
