[package]
name = "dll_unpacker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
thiserror = "*"
derive_more = {version = "*", features=["full"]}

memory_reader = { path = "../memory_reader" }
