[package]
name = "dotnet_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
derive_more = "*"
itertools = "*"
paste = "*"
elsa = "*"

iterator_extensions = { path = "../iterator_extensions" }
memory_reader = { path = "../memory_reader" }
dll_unpacker = { path = "../dll_unpacker" }

[dev-dependencies]
paste = "1.0.15"
