[package]
name = "dotnet_debugger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
derive_more = "*"
itertools = "*"
paste = "*"
elsa = "*"
lru = "0.14.0"
arrayvec = "*"

iterator_extensions = { path = "../iterator_extensions" }
memory_reader = { path = "../memory_reader" }
dll_unpacker = { path = "../dll_unpacker" }
format_utils = { path = "../format_utils" }
env_var_flag = { path = "../env_var_flag" }

bytecode_proc_macros = { path = "../bytecode_proc_macros" }

[dev-dependencies]
paste = "1.0.15"
indoc = "2"