[package]
name = "dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "*"
derive_more = "*"
itertools = "*"
arrayvec = "*"
lru = "0.14.0"

iterator_extensions = { path = "../iterator_extensions" }
dll_unpacker = { path = "../dll_unpacker" }
dotnet_debugger = { path = "../dotnet_debugger" }
env_var_flag = { path = "../env_var_flag" }
memory_reader = { path = "../memory_reader" }


dsl_analysis = { path = "analysis" }
dsl_ir = { path = "ir" }
dsl_vm = { path = "vm" }
dsl_proc_macros = { path = "proc_macros" }

[dev-dependencies]
paste = "1.0.15"
indoc = "2"