[package]
name = "dsl"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "*"
derive_more = "*"
itertools = "*"
arrayvec = "*"
lru = "0.14.0"

iterator_extensions = { path = "../iterator_extensions" }
dll_unpacker = { path = "../dll_unpacker" }
dotnet_debugger = { path = "../dotnet_debugger" }
env_var_flag = { path = "../env_var_flag" }
memory_reader = { path = "../memory_reader" }


dsl_analysis = { path = "analysis" }
dsl_compile = { path = "compile" }
dsl_graph_comparison = { path = "graph_comparison" }
dsl_interpreter = { path = "interpreter" }
dsl_ir = { path = "ir" }
dsl_lowering = { path = "lowering" }
dsl_optimize = { path = "optimize" }
dsl_proc_macros = { path = "proc_macros" }
dsl_rewrite_utils = { path = "rewrite_utils" }
dsl_runtime = { path = "runtime" }
dsl_validation = { path = "validation" }
dsl_vm = { path = "vm" }

[dev-dependencies]
paste = "1.0.15"
indoc = "2"