[package]
name = "stardew_bot"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "stardew_bot"
path = "src/main.rs"

[dependencies]
structopt = "*"
thiserror = "*"
derive_more = "*"
itertools = "*"
num = "0.4"
priority-queue = "*"

xxhash-rust = {version = "0.8.15", features = ["xxh32"]}

ratatui = "*"
crossterm = "*"
chrono = "*"

x11rb = {version = "*", features = ["xtest"]}

memory_reader = {path = "../memory_reader"}
tui_utils = { path = "../tui_utils" }
stardew_utils = {path = "../stardew_utils"}
dotnet_debugger = { path = "../dotnet_debugger" }
