[package]
name = "stardew_bot"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "stardew_bot"
path = "src/main.rs"

[dependencies]
structopt = "*"
thiserror = "*"
derive_more = "*"
itertools = "*"
priority-queue = "*"

ratatui = "*"
crossterm = "*"
chrono = "*"

x11rb = {version = "*", features = ["xtest"]}

memory_reader = {path = "../memory_reader"}
tui_utils = { path = "../tui_utils" }
stardew_utils = {path = "../stardew_utils"}
dotnet_debugger = { path = "../dotnet_debugger" }

geometry = {path = "./geometry"}
game_state = {path = "./game_state"}