[package]
name = "stardew_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
sysinfo = "*"


[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = {version = "0.3"}