[package]
name = "tui_explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "*"
thiserror = "*"
regex = "*"

ratatui = "*"
crossterm = "*"
signal-hook = "*"
chrono = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

dll_unpacker = { path = "../dll_unpacker" }
memory_reader = { path = "../memory_reader" }
stardew_utils = { path = "../stardew_utils" }
dotnet_debugger = { path = "../dotnet_debugger" }

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = {version = "0.3", features=['html_reports']}
