[package]
name = "tui_explorer"
version = "0.1.0"
edition = "2021"
default-run = "tui_explorer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "tui_explorer"
path = "src/main.rs"

[dependencies]
itertools = "*"
thiserror = "*"
regex = "*"

anymap = "*"
ratatui = "*"
crossterm = "*"
chrono = "*"

serde = { version = "1.0", features = ["derive"] }
serde_json = "*"

iterator_extensions = { path = "../iterator_extensions" }
tui_utils = { path = "../tui_utils" }
dll_unpacker = { path = "../dll_unpacker" }
memory_reader = { path = "../memory_reader" }
stardew_utils = { path = "../stardew_utils" }
dotnet_debugger = { path = "../dotnet_debugger" }

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
criterion = {version = "0.3", features=['html_reports']}
