[package]
name = "dsl_interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "*"
itertools = "*"
smallvec = "*"

dotnet_debugger = { path = "../../dotnet_debugger" }
memory_reader = { path = "../../memory_reader" }

dsl_ir = { path = "../ir" }
dsl_runtime = { path = "../runtime" }
