[package]
name = "dsl_passes"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "*"
itertools = "*"

dll_unpacker = { path = "../../dll_unpacker" }
dotnet_debugger = { path = "../../dotnet_debugger" }

dsl_ir = { path = "../ir" }
dsl_rewrite_utils = { path = "../rewrite_utils" }
dsl_analysis = { path = "../analysis" }
